--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script>
         console.log("Hello World!")
     </script>
+    <script></script>
 </body>
 </html>
 <!-- this is a comment -->
