--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script>
         console.log("Hello World!")
     </script>
-    <script></script>
+    <script>prompt("Hi, how are you?")</script>
 </body>
 </html>
 <!-- this is a comment -->
